--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
                         <a
                           href="https://www.astrip-wp.egenslab.com/li-river-chinas-orignial-postcard-landcaspe/"
                           class="read-more-btn"
-                          >Continue Reading<i class="bi bi-arrow-right"></i
+                          >Teruskan membaca<i class="bi bi-arrow-right"></i
                         ></a>
                         <ul class="share-list">
                           <li>
@@ -1639,7 +1639,7 @@
                         <a
                           href="https://www.astrip-wp.egenslab.com/the-social-art-of-zaha-hadid-architectures-presence/"
                           class="read-more-btn"
-                          >Continue Reading<i class="bi bi-arrow-right"></i
+                          >Teruskan membaca<i class="bi bi-arrow-right"></i
                         ></a>
                         <ul class="share-list">
                           <li>
@@ -1742,7 +1742,7 @@
                         <a
                           href="https://www.astrip-wp.egenslab.com/jungles-in-paris-vermonts-rugged-retro-ski-mountain/"
                           class="read-more-btn"
-                          >Continue Reading<i class="bi bi-arrow-right"></i
+                          >Teruskan membaca<i class="bi bi-arrow-right"></i
                         ></a>
                         <ul class="share-list">
                           <li>
@@ -1845,7 +1845,7 @@
                         <a
                           href="https://www.astrip-wp.egenslab.com/day-out-on-the-ile-de-re-getting-hotter-and-hotter-2/"
                           class="read-more-btn"
-                          >Continue Reading<i class="bi bi-arrow-right"></i
+                          >Teruskan membaca<i class="bi bi-arrow-right"></i
                         ></a>
                         <ul class="share-list">
                           <li>
@@ -1948,7 +1948,7 @@
                         <a
                           href="https://www.astrip-wp.egenslab.com/benefit-from-a-15-discount-to-make-your-reservations/"
                           class="read-more-btn"
-                          >Continue Reading<i class="bi bi-arrow-right"></i
+                          >Teruskan membaca<i class="bi bi-arrow-right"></i
                         ></a>
                         <ul class="share-list">
                           <li>
@@ -2052,7 +2052,7 @@
                         <a
                           href="https://www.astrip-wp.egenslab.com/how-to-select-the-perfect-quality-camping-tent/"
                           class="read-more-btn"
-                          >Continue Reading<i class="bi bi-arrow-right"></i
+                          >Teruskan membaca<i class="bi bi-arrow-right"></i
                         ></a>
                         <ul class="share-list">
                           <li>
