--- a/index.html
+++ b/index.html
@@ -1148,51 +1148,51 @@
           <div class="main-nav-wrapper">
             <ul id="menu-main-menu" class="ul">
               <!-- <li
-                  id="menu-item-1982"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-234 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-1982"
-                >
-                  <a
-                    href="https://www.astrip-wp.egenslab.com/"
-                    aria-current="page"
-                    >Home</a
-                  ><i class="bi bi-chevron-down"></i>
-                  <ul class="sub-menu">
-                    <li
-                      id="menu-item-2016"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-234 current_page_item menu-item-2016"
-                    >
-                      <a
-                        href="https://www.astrip-wp.egenslab.com/"
-                        aria-current="page"
-                        >Travel Agency 01</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                    <li
-                      id="menu-item-2000"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2000"
-                    >
-                      <a href="https://www.astrip-wp.egenslab.com/home-02/"
-                        >Travel Agency 02</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                    <li
-                      id="menu-item-1994"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1994"
-                    >
-                      <a href="https://www.astrip-wp.egenslab.com/city-tour/"
-                        >City Tour</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                    <li
-                      id="menu-item-1985"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1985"
-                    >
-                      <a href="https://www.astrip-wp.egenslab.com/adventure/"
-                        >Adventure</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                  </ul>
-                </li> -->
+                id="menu-item-1982"
+                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-234 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-1982"
+              >
+                <a
+                  href="https://www.astrip-wp.egenslab.com/"
+                  aria-current="page"
+                  >Home</a
+                ><i class="bi bi-chevron-down"></i>
+                <ul class="sub-menu">
+                  <li
+                    id="menu-item-2016"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-234 current_page_item menu-item-2016"
+                  >
+                    <a
+                      href="https://www.astrip-wp.egenslab.com/"
+                      aria-current="page"
+                      >Travel Agency 01</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li
+                    id="menu-item-2000"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2000"
+                  >
+                    <a href="https://www.astrip-wp.egenslab.com/home-02/"
+                      >Travel Agency 02</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li
+                    id="menu-item-1994"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1994"
+                  >
+                    <a href="https://www.astrip-wp.egenslab.com/city-tour/"
+                      >City Tour</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li
+                    id="menu-item-1985"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1985"
+                  >
+                    <a href="https://www.astrip-wp.egenslab.com/adventure/"
+                      >Adventure</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                </ul>
+              </li> -->
               <li
                 id="menu-item-2339"
                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2339"
@@ -1239,47 +1239,47 @@
                 </ul>
               </li>
               <!-- <li
-                  id="menu-item-2012"
-                  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2012"
-                >
-                  <a href="#">Tour</a><i class="bi bi-chevron-down"></i>
-                  <ul class="sub-menu">
-                    <li
-                      id="menu-item-2064"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2064"
-                    >
-                      <a href="https://www.astrip-wp.egenslab.com/tour/"
-                        >Tour Package 01</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                    <li
-                      id="menu-item-1993"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1993"
-                    >
-                      <a href="https://www.astrip-wp.egenslab.com/package-grid-2/"
-                        >Tour Package 02</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                    <li
-                      id="menu-item-2003"
-                      class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2003"
-                    >
-                      <a
-                        href="https://www.astrip-wp.egenslab.com/package-sidebar/"
-                        >Package Sidebar</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                    <li
-                      id="menu-item-2065"
-                      class="menu-item menu-item-type-post_type menu-item-object-astrip-tour menu-item-2065"
-                    >
-                      <a
-                        href="https://www.astrip-wp.egenslab.com/tour/aegean-adventure/"
-                        >Package Details</a
-                      ><i class="bi bi-chevron-down"></i>
-                    </li>
-                  </ul>
-                </li> -->
+                id="menu-item-2012"
+                class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2012"
+              >
+                <a href="#">Tour</a><i class="bi bi-chevron-down"></i>
+                <ul class="sub-menu">
+                  <li
+                    id="menu-item-2064"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2064"
+                  >
+                    <a href="https://www.astrip-wp.egenslab.com/tour/"
+                      >Tour Package 01</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li
+                    id="menu-item-1993"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1993"
+                  >
+                    <a href="https://www.astrip-wp.egenslab.com/package-grid-2/"
+                      >Tour Package 02</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li
+                    id="menu-item-2003"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2003"
+                  >
+                    <a
+                      href="https://www.astrip-wp.egenslab.com/package-sidebar/"
+                      >Package Sidebar</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li
+                    id="menu-item-2065"
+                    class="menu-item menu-item-type-post_type menu-item-object-astrip-tour menu-item-2065"
+                  >
+                    <a
+                      href="https://www.astrip-wp.egenslab.com/tour/aegean-adventure/"
+                      >Package Details</a
+                    ><i class="bi bi-chevron-down"></i>
+                  </li>
+                </ul>
+              </li> -->
 
               <li
                 id="menu-item-2015"
@@ -1370,14 +1370,14 @@
                     ><i class="bi bi-chevron-down"></i>
                   </li>
                   <!-- <li
-                    id="menu-item-2005"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2005"
-                  >
-                    <a
-                      href="https://www.astrip-wp.egenslab.com/questions-answers/"
-                      >FAQ’s</a
-                    ><i class="bi bi-chevron-down"></i>
-                  </li> -->
+                  id="menu-item-2005"
+                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2005"
+                >
+                  <a
+                    href="https://www.astrip-wp.egenslab.com/questions-answers/"
+                    >FAQ’s</a
+                  ><i class="bi bi-chevron-down"></i>
+                </li> -->
                   <li
                     id="menu-item-2396"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2396"
@@ -1413,43 +1413,43 @@
           </div>
           <!-- mobile-search-area -->
 
-          <!-- <div
+          <div
             class="phone-call sibling2 d-flex justify-content-start align-items-center flex-row d-lg-none d-block mt-5"
           >
-            <div class="icon">
+            <!-- <div class="icon">
               <img src="images/cell-icon.svg" alt="image" />
             </div>
             <div class="number">
               <span>Call Now</span>
 
               <h5><a href="tel:+8801701111000">+(62) 0895-1425-3344</a></h5>
-            </div>
-          </div> -->
+            </div> -->
+          </div>
 
-          <a
+          <!-- <a
             href="https://www.example.com"
             class="eg-btn btn--primary btn--lg d-lg-none d-flex mt-5"
             >Please add Button Text</a
-          >
+          > -->
         </div>
 
         <div
           class="nav-right d-flex jsutify-content-end align-items-center gap-5"
         >
-          <!-- <div
+          <div
             class="phone-call sibling2 justify-content-start align-items-center flex-row d-xl-flex d-none"
           >
-            <div class="icon">
+            <!-- <div class="icon">
               <img src="images/cell-icon.svg" alt="image" />
             </div>
             <div class="number">
               <span>Call Now</span>
               <h5><a href="tel:+8801701111000">+880 170 1111 000</a></h5>
-            </div>
+            </div> -->
           </div>
           <div class="mobile-menu-btn d-lg-none d-block">
             <i class="bi bi-list text-dark"></i>
-          </div> -->
+          </div>
         </div>
       </div>
     </header>
